# MxD84

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
src/mxd84-pkg/utilities/: __init__.py
src/mxd84_pkg.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
